--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/my-project
     docker:
-      - image: circleci/node:10.2-browsers
+      - image: circleci/node:4.8.2
     steps:
       - checkout
       - restore_cache:
